WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46880
Fix build errors when compiling without geolocation and inspector
https://bugs.webkit.org/show_bug.cgi?id=46880
Summary
Fix build errors when compiling without geolocation and inspector
jochen
Reported
2010-09-30 01:21:16 PDT
Fix build errors when compiling without geolocation and inspector
Attachments
Patch
(1.50 KB, patch)
2010-09-30 01:22 PDT
,
jochen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2010-09-30 01:22:11 PDT
Created
attachment 69318
[details]
Patch
jochen
Comment 2
2010-09-30 01:23:50 PDT
These warnings can be triggered when compiling with --minimal
Jeremy Orlow
Comment 3
2010-09-30 01:55:49 PDT
Comment on
attachment 69318
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2010-09-30 02:36:21 PDT
Comment on
attachment 69318
[details]
Patch Clearing flags on attachment: 69318 Committed
r68769
: <
http://trac.webkit.org/changeset/68769
>
WebKit Commit Bot
Comment 5
2010-09-30 02:36:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug