2010-09-30  Jochen Eisinger  <jochen@chromium.org>

Reviewed by Jeremy Orlow.

        Mark unused parameters as such.
        https://bugs.webkit.org/show_bug.cgi?id=46880

        * inspector/InspectorDOMAgent.cpp:
        * page/Geolocation.cpp:
        (WebCore::Geolocation::clearWatch):

Canonical link: https://commits.webkit.org/59401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68769 268f45cc-cd09-0410-ab3c-d52691b4dbfc