WebCore/inspector/InspectorDOMAgent.cpp
@@ -187,6 +187,8 @@ public:
             if (!ec)
                 resultCollector.add(node);
         }
+#else
+        UNUSED_PARAM(resultCollector);
 #endif
     }
 };
